--- a/index.html
+++ b/index.html
@@ -174,7 +174,7 @@
                             <div class="cards">
                                 <div class="card" data-aos="fade-right" data-aos-delay="100">
                                     <h3 class="degree">Bachelors Of Technology - <span class="specialization">Information Technology</span></h3>
-                                    <p class="college">Bundelkhand Institute if Engineering & Technology Jhansi</p>
+                                    <p class="college">Bundelkhand Institute of Engineering & Technology Jhansi</p>
                                     <p class="year">2019 - 2022</p>
                                 </div>
                                 <div class="card mid" data-aos="fade-right" data-aos-delay="200">
