--- a/index.html
+++ b/index.html
@@ -811,7 +811,7 @@
                         I'm always up for working with a great team. All I need is coffee, a sofa and some challenging tasks! 
                         <br> Check My Resume and let me know if I am a good fit for your organization
                     </span>
-                    <a href="https://drive.google.com/file/d/1eWkD7izoy2m_mrtCDhUJ31TMAbbJ7dwh/view?usp=sharing" target="_blank" class="resumebtn" rel="noopener" data-aos="zoom-in" data-aos-delay="200">Download Resume <i class="fa fa-download"></i></a>
+                    <a href="https://bit.ly/rishiResume" target="_blank" class="resumebtn" rel="noopener" data-aos="zoom-in" data-aos-delay="200">Download Resume <i class="fa fa-download"></i></a>
                 </div>
 
                 <div id="footer">
