--- a/index.html
+++ b/index.html
@@ -856,5 +856,16 @@
     <!-- Appzi: Capture Insightful Feedback -->
     <script async src="https://w.appzi.io/w.js?token=ZFzqB"></script>
     <!-- End Appzi -->
+        
+    <!-- Global site tag (gtag.js) - Google Analytics -->
+    <script async src="https://www.googletagmanager.com/gtag/js?id=G-S55Y6T0256"></script>
+    <script>
+      window.dataLayer = window.dataLayer || [];
+      function gtag(){dataLayer.push(arguments);}
+      gtag('js', new Date());
+
+      gtag('config', 'G-S55Y6T0256');
+    </script>
+        
 </body>
 </html>
